# wildcatter

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: constraints.txt  tests.yml
docker/: debian-dev.Dockerfile  debian.Dockerfile
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
examples/: 01_rl_hello_world_cartpole.ipynb  02_gitc_driller.ipynb  GITCDRILLER.ipynb  ViewMaps.ipynb  model_gen.ipynb  rl_101.ipynb  testenvironment.ipynb
examples/data/: 2d_layercake.csv  2d_stacked.csv  environment_test.csv
src/wildcatter/: __init__.py  __main__.py  environment.py
tests/: __init__.py  test_main.py
wildcatter/: environment.py
